src/editor/styles/Editor.css
/*
    RPG Paper Maker Copyright (C) 2017-2024 Wano

    RPG Paper Maker engine is under proprietary license.
    This source code is also copyrighted.

    Use Commercial edition for commercial use of your games.
    See RPG Paper Maker EULA here:
        http://rpg-paper-maker.com/index.php/eula.
*/

:root {
	--main-bg-color: #2e324a;
	--main-color: white;
	--darker-bg-color: #29273d;
	--darkest-bg-color: #221f35;
	--darkest-containers-bg-color: #221f2e;
	--hover-main-bg-color: #383c58;
	--lighter-bg-color: #5f5a8a;
	--lightest-bg-color: #6e709c;
	--grey-color: #878787;
	--grey-light-color: #cacaca;
	--primary-color: #25bbb9;
	--primary-dark-color: #218584;
	--hover-primary-dark-color: #2a9896;
	--orange-color: #f6b780;
	--red-color: #de3a3c;
	--hover-red-color: #ce4144;
	--patreon-color: #f96753;
	--hover-patreon-color: #fe7765;
	--special-elements-size: 30px;
	--green-color: #78ad51;
}

@keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

body {
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
		'Droid Sans', 'Helvetica Neue', sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	padding: 0;
	background-color: var(--main-bg-color);
	color: var(--main-color);
	font-size: 12px;
	touch-action: none;
	image-rendering: pixelated;
	image-rendering: crisp-edges;
}

code {
	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.flex {
	display: flex;
	flex-direction: row;
}

.flex-column {
	display: flex;
	flex-direction: column;
}

.flex-one {
	display: flex;
	flex-grow: 1;
	flex-basis: 0;
}

.flex-zero {
	flex-grow: 0;
}

.flex-center-v {
	display: flex;
	align-items: center;
}

.flex-center-h {
	display: flex;
	justify-content: center;
}

.flex-right-horizontally {
	display: flex;
	justify-content: flex-end;
}

.flex-wrap {
	flex-wrap: wrap;
}

.gap-small {
	gap: 5px;
}

.gap-medium {
	gap: 10px;
}

.padding-small {
	padding: 5px;
}

.padding-medium {
	padding: 15px;
}

.padding-large {
	padding: 30px;
}

.label {
	margin-right: 0.5em;
}

.fill-space {
	margin: 0;
	padding: 0;
	position: absolute;
	width: 100%;
	height: 100%;
}

.fill-width {
	width: 100%;
}

.fill-height {
	height: 100%;
}

.no-select-text {
	-webkit-touch-callout: none; /* iOS Safari */
	-webkit-user-select: none; /* Safari */
	-khtml-user-select: none; /* Konqueror HTML */
	-moz-user-select: none; /* Old versions of Firefox */
	-ms-user-select: none; /* Internet Explorer/Edge */
	user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}

.word-break {
	word-break: break-all;
}

.pointer {
	cursor: pointer !important;
}

.grabbing {
	cursor: grabbing !important;
}

.loading {
	cursor: progress !important;
}

.ew-resize {
	cursor: ew-resize !important;
}

.ns-resize {
	cursor: ns-resize !important;
}

.nesw-resize {
	cursor: nesw-resize !important;
}

.nwse-resize {
	cursor: nwse-resize !important;
}

.col-resize {
	cursor: col-resize !important;
}

.row-resize {
	cursor: row-resize !important;
}

.absolute {
	position: absolute;
}

.fixed {
	position: fixed;
}

.relative {
	position: relative;
}

.hight-z-index {
	z-index: 999;
}

/* width */
::-webkit-scrollbar {
	width: 10px;
	height: 10px;
}

/* Track */
::-webkit-scrollbar-track {
	background: #888;
}

/* Handle */
::-webkit-scrollbar-thumb {
	background: #d4d4d4;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
	background: #f1f1f1;
}

.scrollable {
	overflow: auto;
	overflow-y: overlay;
}

.scrollable-flex-one {
	flex: 1 1 auto;
	overflow-y: auto;
	height: 0px;
	min-height: 100px;
}

.warning {
	color: var(--orange-color);
}

.error {
	color: var(--red-color);
}

.text-center {
	text-align: center;
}

.text-small-detail {
	color: var(--grey-color);
	font-size: 11px;
}

.text-ellipsis {
	display: block;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	width: 0px;
	flex: 1;
}

.white-space-nowrap {
	white-space: nowrap;
}

.bg-darker {
	background-color: var(--darker-bg-color);
}

.hidden {
	display: none !important;
}

.visibility-hidden {
	visibility: hidden;
}

.mobile-only {
	display: none;
}

.disabled-label {
	opacity: 0.4;
	cursor: initial;
}

